[package]
name = "logly"
version = "0.0.3"
edition = "2021"
description = "A Rust logging package designed to simplify and enhance your logging experience."
license = "MIT"
authors = ["muhammad-fiaz"]
repository = "https://github.com/muhammad-fiaz/logly-rs.git"
keywords = ["logging", "log", "logly", "logly-rs","rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
log = "0.4.20"
fern = "0.6"
colorama = "0.1.0"
env_logger = "0.11.2"
termcolor = "1.1"
ansi_term = "0.12.1"
regex = "1.10.2"

# to use cargo run uncomment the following lines
#[[bin]]
#name = "logly"
#path = "src/lib.rs"