[package]
name = "logly"
version = "0.0.4"
edition = "2021"
description = "High-performance, structured logging library with async support, rotation, filtering, and GPU/CPU optimization"
license = "MIT"
authors = ["muhammad-fiaz <contact@muhammadfiaz.com>"]
repository = "https://github.com/muhammad-fiaz/logly-rs.git"
homepage = "https://github.com/muhammad-fiaz/logly-rs"
documentation = "https://github.com/muhammad-fiaz/logly-rs/blob/main/README.md"
keywords = ["logging", "log", "async", "structured", "performance"]
categories = ["development-tools::debugging"]
readme = "README.md"

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Async channels
crossbeam-channel = "0.5"
# File operations
regex = "1.10"
# Thread pool for callbacks
rayon = "1.10"
# Atomic operations
parking_lot = "0.12"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# CUDA support (optional)
cudarc = { version = "0.11", optional = true, features = ["cuda-12050"] }
# Version checking
ureq = { version = "2.9", optional = true, default-features = false, features = ["tls"] }
# Backtrace for error handling
backtrace = "0.3"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "logging_benchmark"
harness = false

[features]
default = ["async", "rotation", "json", "colors", "auto-update-check"]
async = []
rotation = []
json = []
colors = []
gpu = ["cudarc"]  # Optional experimental feature
auto-update-check = ["ureq"]
